- GUI: Fixed: Wrong vertical alignment for login box
git-svn-id: https://i-mscp.svn.sourceforge.net/svnroot/i-mscp/trunk@3906 15a38060-5cfe-4f5c-bf9d-b5d42b1378a7

--- a/gui/themes/default/css/login-imscp.css
+++ b/gui/themes/default/css/login-imscp.css
@@ -116,6 +116,7 @@ div.toolbox div a.webmail{
 	vertical-align: middle;
 	position: static;
 }
+
 #inner {
 	position: relative;
 	top: -50%;
@@ -123,7 +124,7 @@ div.toolbox div a.webmail{
 }  /* for explorer only */
 
 #inner {
-	width: 200px;
+	width: 316px;
 	margin-left: auto;
 	margin-right: auto;
 } /* for all browsers*/
